some impovements in first sections

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/style2.css" rel="stylesheet">
     <!--<link href="css/style.min.css" rel="stylesheet">-->
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto" rel="stylesheet">
@@ -81,70 +82,65 @@
             <button type="button" class="banner__info__button btn-default">Learn more</button>
         </div>
     </div>
-    <div class="row text-center banner__slider">
-        <div class="col-sm-3 col-xs-6">
-            <div class="row banner__slider__slide active-slide">
-                <div class="col-xs-12 slide__bar">
+    <div class="container">
+      <div class="row text-center banner__slider">
+          <div class="col-sm-3 col-xs-6">
+              <div class="row banner__slider__slide active-slide">
+                  <div class="col-xs-12 slide__bar">
 
-                </div>
-                <div class="col-xs-12 slide__text">
-                    <span>01</span> Intro
-                </div>
-            </div>
-        </div>
+                  </div>
+                  <div class="col-xs-12 slide__text">
+                      <span>01</span> Intro
+                  </div>
+              </div>
+          </div>
 
-        <div class="col-sm-3 col-xs-6">
-            <div class="row banner__slider__slide">
-                <div class="col-xs-12 slide__bar">
+          <div class="col-sm-3 col-xs-6">
+              <div class="row banner__slider__slide">
+                  <div class="col-xs-12 slide__bar">
 
-                </div>
-                <div class="col-xs-12 slide__text">
-                    <span>02</span> Work
-                </div>
-            </div>
-        </div>
+                  </div>
+                  <div class="col-xs-12 slide__text">
+                      <span>02</span> Work
+                  </div>
+              </div>
+          </div>
 
-        <div class="col-sm-3 col-xs-6">
-            <div class="row banner__slider__slide">
-                <div class="col-xs-12 slide__bar">
+          <div class="col-sm-3 col-xs-6">
+              <div class="row banner__slider__slide">
+                  <div class="col-xs-12 slide__bar">
 
-                </div>
-                <div class="col-xs-12 slide__text">
-                    <span>03</span> About
-                </div>
-            </div>
-        </div>
+                  </div>
+                  <div class="col-xs-12 slide__text">
+                      <span>03</span> About
+                  </div>
+              </div>
+          </div>
 
-        <div class="col-sm-3 col-xs-6">
-            <div class="row banner__slider__slide">
-                <div class="col-xs-12 slide__bar">
+          <div class="col-sm-3 col-xs-6">
+              <div class="row banner__slider__slide">
+                  <div class="col-xs-12 slide__bar">
 
-                </div>
-                <div class="col-xs-12 slide__text">
-                    <span>04</span> Contact
-                </div>
-            </div>
-        </div>
+                  </div>
+                  <div class="col-xs-12 slide__text">
+                      <span>04</span> Contact
+                  </div>
+              </div>
+          </div>
 
+      </div>
     </div>
+
 </div>
 
 <div class="container-fluid" id="about">
-    <div class="row text-center about__info">
-        <div class="col-xs-12">
-            <div class="about__info--first">
-                What we do
-            </div>
-            <div class="about__info--second">
-                Story about us
-            </div>
-            <span class="about__info__bar"></span></br>
-            <div class="about__info--text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.
-            </div>
-        </div>
+    <div class="page-title text-center">
+        <h3 class="page-title__main">What we do</h3>
+        <h2 class="page-title__subtitle">Story about us</h2>
+        <span class="page-title__bar"></span>
+        <p class="page-title__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+        ex ea commodo consequat.</p>
     </div>
     <div class="row text-center about__gallery">
 
@@ -153,7 +149,7 @@
 
             </div>
             <div class="about__gallery--top">
-                <div class="row">
+                <div class="row inner">
                     <img class="img-responsive" src="./img/pictograms/aboutus_pic1_icon.png" alt="">
                     <span>Super team</span>
                 </div>
@@ -166,7 +162,7 @@
             <div class="about__gallery--bg">
             </div>
             <div class="about__gallery--top">
-                <div class="row">
+                <div class="row inner">
                     <img class="img-responsive" src="./img/pictograms/aboutus_pic1_icon.png" alt="">
                     <span>Super team</span>
                 </div>
@@ -180,7 +176,7 @@
 
             </div>
             <div class="about__gallery--top">
-                <div class="row">
+                <div class="row inner">
                     <img class="img-responsive" src="./img/pictograms/aboutus_pic1_icon.png" alt="">
                     <span>Super team</span>
                 </div>
@@ -192,7 +188,7 @@
 </div>
 
 <div class="container-fluid" id="numbers">
-    <div class="row">
+    <div class="row container">
         <div class="numbers__div col-xs-2 text-center">
             <span class="numbers__div__count"> 42 </span>
             <span class="numbers__div__description"> Web design projects </span>
@@ -221,17 +217,12 @@
 </div>
 
 <div class="container-fluid" id="services">
-    <div class="row text-center services__intro">
-        <div class="col-xs-12">
-            <div class="services__intro__text--first">
-                We work with
-            </div>
-            <div class="services__intro__text--second">
-                Amazing services
-            </div>
-            <span class="services__intro__bar"></span></br>
-        </div>
-    </div>
+  <div class="page-title text-center">
+      <h3 class="page-title__main">We work with</h3>
+      <h2 class="page-title__subtitle">Amazing services</h2>
+      <span class="page-title__bar"></span>
+
+  </div>
     <div class="services__gallery">
         <div class="row">
             <div class="col-xs-12 row row--first">
@@ -296,6 +287,56 @@
             </div>
         </div>
     </div>
+
+  </ul>
+              </div>
+              <ul class="ca-menu">
+                  <li>
+                      <a href="#">
+                          <span class="ca-icon">F</span>
+                          <div class="ca-content">
+                              <h2 class="ca-main">Exceptional Service</h2>
+                              <h3 class="ca-sub">Personalized to your needs</h3>
+                          </div>
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#">
+                          <span class="ca-icon">H</span>
+                          <div class="ca-content">
+                              <h2 class="ca-main">Creative Storytelling</h2>
+                              <h3 class="ca-sub">Advanced use of technology</h3>
+                          </div>
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#">
+                          <span class="ca-icon">N</span>
+                          <div class="ca-content">
+                              <h2 class="ca-main">Infographical Education</h2>
+                              <h3 class="ca-sub">Understanding visually</h3>
+                          </div>
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#">
+                          <span class="ca-icon">K</span>
+                          <div class="ca-content">
+                              <h2 class="ca-main">Sophisticated Team</h2>
+                              <h3 class="ca-sub">Professionals in action</h3>
+                          </div>
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#">
+                          <span class="ca-icon">L</span>
+                          <div class="ca-content">
+                              <h2 class="ca-main">Unconditional Support</h2>
+                              <h3 class="ca-sub">24/7 for you needs</h3>
+                          </div>
+                      </a>
+                  </li>
+              </ul>
 </div>
 
 <div class="container-fluid" id="design">
