--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <button type="button" class="banner__info__button btn-default">Learn more</button>
         </div>
     </div>
+
     <div class="row text-center banner__slider">
         <div class="col-sm-3 col-xs-6">
             <div class="row banner__slider__slide active-slide">
@@ -129,22 +130,17 @@
 </div>
 
 <div class="container-fluid" id="about">
-    <div class="row text-center about__info">
-        <div class="col-xs-12">
-            <div class="about__info--first">
-                What we do
-            </div>
-            <div class="about__info--second">
-                Story about us
-            </div>
-            <span class="about__info__bar"></span></br>
-            <div class="about__info--text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.
-            </div>
-        </div>
+    <div class="page-title text-center">
+        <h3 class="page-title__main">What we do</h3>
+        <h2 class="page-title__subtitle">Story about us</h2>
+        <span class="page-title__bar"></span>
+        <p class="page-title__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
     </div>
+
     <div class="row text-center about__gallery">
 
         <div class="col-xs-12 col-sm-4 wrapper">
@@ -220,16 +216,11 @@
 </div>
 
 <div class="container-fluid" id="services">
-    <div class="row text-center services__intro">
-        <div class="col-xs-12">
-            <div class="services__intro__text--first">
-                We work with
-            </div>
-            <div class="services__intro__text--second">
-                Amazing services
-            </div>
-            <span class="services__intro__bar"></span></br>
-        </div>
+    <div class="page-title text-center">
+        <h3 class="page-title__main">We work with</h3>
+        <h2 class="page-title__subtitle">Amazing services</h2>
+        <span class="page-title__bar"></span>
+
     </div>
     <div class="services__gallery">
         <div class="row">
@@ -300,18 +291,16 @@
     </div>
 
 
-    <div class="container-fluid" id="design">
-      <div class="row text-center design__intro">
+<div class="container-fluid" id="design">
+    <div class="row text-center design__intro">
         <div class="col-xs-12">
 
-            <img class="design__bg"/>
-            <div class="design__intro__text--first">
-                For all devices
+            <img class="design__bg" />
+            <div class="page-title text-center">
+                <h3 class="page-title__main">For all devices</h3>
+                <h2 class="page-title__subtitle">Unique design</h2>
+                <span class="page-title__bar"></span>
             </div>
-            <div class="design__intro__text--second">
-                Unique design
-            </div>
-            <span class="design__intro__bar"></span></br>
             <div class="design__intro__image row">
                 <div class="col-xs-12 tablet">
                     <img src="img/feature_tablet.png" class="img-responsive" alt="">
@@ -327,22 +316,17 @@
 </div>
 
 <div class="container-fluid" id="service">
-    <div class="row text-center service__info">
-        <div class="col-xs-12">
-            <div class="service__info--first">
-                Service
-            </div>
-            <div class="service__info--second">
-                What we do
-            </div>
-            <span class="service__info__bar"></span></br>
-            <div class="service__info--text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.
-            </div>
-        </div>
+    <div class="page-title text-center">
+        <h3 class="page-title__main">Service</h3>
+        <h2 class="page-title__subtitle">What we do</h2>
+        <span class="page-title__bar"></span>
+        <p class="page-title__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim </br>veniam, quis
+            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
     </div>
+
     <div class="row service__details">
         <div class="col-xs-12 col-sm-12 col-md-6 service__details__photo">
             <img src="img/service2_img.png" class="img-responsive" alt="">
@@ -509,7 +493,7 @@
         <span class="page-title__bar"></span>
         <p class="page-title__text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim </br>veniam, quis
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
             nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </p>
     </div>
@@ -627,7 +611,7 @@
 </div>
 
 <div class="container-fluid work">
-    <div class="page-title">
+    <div class="page-title text-center">
         <h3 class="page-title__main">What we do</h3>
         <h2 class="page-title__subtitle">SOME OF OUR WORK</h2>
         <span class="page-title__bar"></span>
