--- a/index.html
+++ b/index.html
@@ -223,33 +223,34 @@
 
     </div>
     <div class="services__gallery">
-        <div class="row">
+        <div class="row container">
             <div class="col-xs-12 row row--first">
                 <div class="col-xs-12 col-sm-4 row services__gallery__block left">
                     <div class="col-xs-2 services__gallery__block__pic">
-                        <img src="img/pictograms/service_img1.png"/>
+                        <img src="img/pictograms/service_img1.png" />
                     </div>
                     <div class="col-xs-10 services__gallery__block__text">
-                        <span class="title">Photography</span><br/><br/>
-                        <span class="decription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                        <h4 class="title">Photography</h4>
+                        <h4 class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.</h4>
                     </div>
                 </div>
+
                 <div class="col-xs-12 col-sm-4 row services__gallery__block middle">
                     <div class="col-xs-2 services__gallery__block__pic">
-                        <img src="img/pictograms/service_img2.png"/>
+                        <img src="img/pictograms/service_img2.png" />
                     </div>
                     <div class="col-xs-10 services__gallery__block__text">
-                        <span class="title">Web design</span><br/><br/>
-                        <span class="decription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                        <h4 class="title">Photography</h4>
+                        <h4 class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.</h4>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-4 row services__gallery__block right">
                     <div class="col-xs-2 services__gallery__block__pic">
-                        <img src="img/pictograms/service_img3.png"/>
+                        <img src="img/pictograms/service_img3.png" />
                     </div>
                     <div class="col-xs-10 services__gallery__block__text">
-                        <span class="title">Creativity</span><br/><br/>
-                        <span class="decription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                        <h4 class="title">Photography</h4>
+                        <h4 class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.</h4>
                     </div>
                 </div>
             </div>
@@ -257,38 +258,38 @@
             <div class="col-xs-12 row row--second">
                 <div class="col-xs-12 col-sm-4 row services__gallery__block left">
                     <div class="col-xs-2 services__gallery__block__pic">
-                        <img src="img/pictograms/service_img4.png"/>
+                        <img src="img/pictograms/service_img4.png" />
                     </div>
                     <div class="col-xs-10 services__gallery__block__text">
-                        <span class="title">CEO</span><br/><br/>
-                        <span class="decription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                        <h4 class="title">Photography</h4>
+                        <h4 class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.</h4>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-4 row services__gallery__block middle">
                     <div class="col-xs-2 services__gallery__block__pic">
-                        <img src="img/pictograms/service_img5.png"/>
+                        <img src="img/pictograms/service_img5.png" />
                     </div>
                     <div class="col-xs-10 services__gallery__block__text">
-                        <span class="title">CSS/HTML</span><br/><br/>
-                        <span class="decription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                        <h4 class="title">Photography</h4>
+                        <h4 class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.</h4>
                     </div>
                 </div>
 
                 <div class="col-xs-12 col-sm-4 row services__gallery__block right">
                     <div class="col-xs-2 services__gallery__block__pic">
-                        <img src="img/pictograms/service_img6.png"/>
+                        <img src="img/pictograms/service_img6.png" />
                     </div>
                     <div class="col-xs-10 services__gallery__block__text">
-                        <span class="title">Digital</span><br/><br/>
-                        <span class="decription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                        <h4 class="title">Photography</h4>
+                        <h4 class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.</h4>
                     </div>
                 </div>
             </div>
         </div>
-      </div>
-
-
     </div>
+
+
+</div>
 
 
 <div class="container-fluid" id="design">
