Ready hover in MEET

--- a/index.html
+++ b/index.html
@@ -518,13 +518,13 @@
             <div class="meet__team--background">
                 <div class="meet__team--imgs">
                     <a class="meet__team--img" href="http://www.facebook.com"><img
-                            src="img/pictograms/meet_facebook.png"/></a>
+                            /></a>
                     <a class="meet__team--img" href="http://twitter.com"><img
-                            src="img/pictograms/meet_twitter.png"/></a>
+                            /></a>
                     <a class="meet__team--img" href="http://www.pinterest.com"><img
-                            src="img/pictograms/meet_pinterest.png"/></a>
+                            /></a>
                     <a class="meet__team--img" href="http://www.instagram.com"><img
-                            src="img/pictograms/meet_instagram.png"/></a>
+                            /></a>
                 </div>
             </div>
             <div class="meet__team--people meet__team--people--1">
@@ -540,13 +540,13 @@
             <div class="meet__team--background">
                 <div class="meet__team--imgs">
                     <a class="meet__team--img" href="http://www.facebook.com"><img
-                            src="img/pictograms/meet_facebook.png"/></a>
+                            /></a>
                     <a class="meet__team--img" href="http://twitter.com"><img
-                            src="img/pictograms/meet_twitter.png"/></a>
+                            /></a>
                     <a class="meet__team--img" href="http://www.pinterest.com"><img
-                            src="img/pictograms/meet_pinterest.png"/></a>
+                            /></a>
                     <a class="meet__team--img" href="http://www.instagram.com"><img
-                            src="img/pictograms/meet_instagram.png"/></a>
+                            /></a>
                 </div>
             </div>
             <div class="meet__team--people meet__team--people--2">
@@ -564,13 +564,13 @@
             <div class="meet__team--background">
                 <div class="meet__team--imgs">
                     <a class="meet__team--img" href="http://www.facebook.com"><img
-                            src="img/pictograms/meet_facebook.png"/></a>
+                            /></a>
                     <a class="meet__team--img" href="http://twitter.com"><img
-                            src="img/pictograms/meet_twitter.png"/></a>
+                            /></a>
                     <a class="meet__team--img" href="http://www.pinterest.com"><img
-                            src="img/pictograms/meet_pinterest.png"/></a>
+                            /></a>
                     <a class="meet__team--img" href="http://www.instagram.com"><img
-                            src="img/pictograms/meet_instagram.png"/></a>
+                            /></a>
                 </div>
             </div>
             <div class="meet__team--people meet__team--people--3">
@@ -630,8 +630,10 @@
         <h2 class="page-title__subtitle">SOME OF OUR WORK</h2>
         <span class="page-title__bar"></span>
         <p class="page-title__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim</br>veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commondo consequat.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua.
+            Ut enim ad minim</br>veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commondo
+            consequat.
         </p>
     </div>
     <div class="row work__picture">
@@ -710,7 +712,6 @@
 <div class="container testimontial">
 
     <div id="carousel-1" class="carousel slide" data-ride="carousel">
-        <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
                 <div class="testimontial__slider--page">
@@ -770,14 +771,12 @@
             </div>
         </div>
 
-        <!-- Left and right controls -->
         <a class="left carousel-control" href="#carousel-1" data-slide="prev">
             <img src="img/pictograms/testimontial_arrowleft.png"/>
-
         </a>
+
         <a class="right carousel-control" href="#carousel-1" data-slide="next">
             <img src="img/pictograms/testimontial_arrowright.png"/>
-
         </a>
     </div>
 
@@ -942,12 +941,12 @@
 
 <div class="container-fluid map">
     <a href="https://goo.gl/maps/DHF47rwGPys">
-    <img class="map--back"/>
-    <div class="map__inside">
-        <img class="map__inside--pictogram" src="img/pictograms/map_1.png"/>
-        <p class="map__inside--text">OPEN MAP</p>
-        <img class="map__inside--rectangle" src="img/pictograms/meet_rectangle.png"/>
-    </div>
+        <img class="map--back"/>
+        <div class="map__inside">
+            <img class="map__inside--pictogram" src="img/pictograms/map_1.png"/>
+            <p class="map__inside--text">OPEN MAP</p>
+            <img class="map__inside--rectangle" src="img/pictograms/meet_rectangle.png"/>
+        </div>
     </a>
 </div>
 
