--- a/index.html
+++ b/index.html
@@ -80,53 +80,55 @@
             <button type="button" class="banner__info__button btn-default">Learn more</button>
         </div>
     </div>
+    <div class="container">
+        <div class="row text-center banner__slider">
+            <div class="col-sm-3 col-xs-6">
+                <div class="row banner__slider__slide active-slide">
+                    <div class="col-xs-12 slide__bar">
 
-    <div class="row text-center banner__slider">
-        <div class="col-sm-3 col-xs-6">
-            <div class="row banner__slider__slide active-slide">
-                <div class="col-xs-12 slide__bar">
-
-                </div>
-                <div class="col-xs-12 slide__text">
-                    <span>01</span> Intro
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-3 col-xs-6">
-            <div class="row banner__slider__slide">
-                <div class="col-xs-12 slide__bar">
-
-                </div>
-                <div class="col-xs-12 slide__text">
-                    <span>02</span> Work
+                    </div>
+                    <div class="col-xs-12 slide__text">
+                        <span>01</span> Intro
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col-sm-3 col-xs-6">
-            <div class="row banner__slider__slide">
-                <div class="col-xs-12 slide__bar">
+            <div class="col-sm-3 col-xs-6">
+                <div class="row banner__slider__slide">
+                    <div class="col-xs-12 slide__bar">
 
-                </div>
-                <div class="col-xs-12 slide__text">
-                    <span>03</span> About
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-3 col-xs-6">
-            <div class="row banner__slider__slide">
-                <div class="col-xs-12 slide__bar">
-
-                </div>
-                <div class="col-xs-12 slide__text">
-                    <span>04</span> Contact
+                    </div>
+                    <div class="col-xs-12 slide__text">
+                        <span>02</span> Work
+                    </div>
                 </div>
             </div>
-        </div>
 
+            <div class="col-sm-3 col-xs-6">
+                <div class="row banner__slider__slide">
+                    <div class="col-xs-12 slide__bar">
+
+                    </div>
+                    <div class="col-xs-12 slide__text">
+                        <span>03</span> About
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <div class="row banner__slider__slide">
+                    <div class="col-xs-12 slide__bar">
+
+                    </div>
+                    <div class="col-xs-12 slide__text">
+                        <span>04</span> Contact
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </div>
+
 </div>
 
 <div class="container-fluid" id="about">
@@ -187,7 +189,7 @@
 </div>
 
 <div class="container-fluid" id="numbers">
-    <div class="row">
+    <div class="row container">
         <div class="numbers__div col-xs-2 text-center">
             <span class="numbers__div__count"> 42 </span>
             <span class="numbers__div__description"> Web design projects </span>
@@ -405,84 +407,81 @@
     </div>
 
 </div>
+<div class="container-fluid carousel1">
+    <div class="container">
 
-
-<div class="container-fluid" id="carousel1">
-
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-            <div class="item active">
-                <div class="carousel__slide">
-                    <div class="col-xs-1 col-sm-4"></div>
-                    <div class="col-xs-2 col-sm-1 carousel__slide--img">
-                        <img src="img/pictograms/quote_pic.png"/>
-                    </div>
-                    <div class="col-xs-8 col-sm-3">
-                        <div class="row carousel__slide--text">
-                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            ut laboer et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."
+        <div id="carousel-10" class="carousel slide" data-ride="carousel">
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <div class="carousel1__slider--page">
+                        <div class="col-sm-2 col-xs-10 carousel1__slider--page--img">
+                            <img src="img/pictograms/quote_pic.png"/>
                         </div>
-                        <div class="row carousel__slide--name">
-                            <img src="img/pictograms/meet_rectangle.png"/>
-                            <span class="name">John Doe</span>
+                        <div class="col-sm-7 col-xs-10">
+                            <div class="row carousel1__slider--page--text">
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut laboer
+                                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."
+                            </div>
+                            <div class="row carousel1__slider--page--name">
+                                <img src="img/pictograms/meet_rectangle.png"/>
+                                <span class="carousel1__slider--page--name--name">John Doe</span>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-xs-1 col-sm-4"></div>
+                </div>
+
+                <div class="item">
+                    <div class="carousel1__slider--page">
+                        <div class="col-sm-2 col-xs-10 carousel1__slider--page--img">
+                            <img src="img/pictograms/quote_pic.png"/>
+                        </div>
+                        <div class="col-sm-7 col-xs-10">
+                            <div class="row carousel1__slider--page--text">
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut laboer
+                                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."
+                            </div>
+                            <div class="row carousel1__slider--page--name">
+                                <img src="img/pictograms/meet_rectangle.png"/>
+                                <span class="carousel1__slider--page--name--name">John Doe</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="carousel1__slider--page">
+                        <div class="col-sm-2 col-xs-10 carousel1__slider--page--img">
+                            <img src="img/pictograms/quote_pic.png"/>
+                        </div>
+                        <div class="col-sm-7 col-xs-10">
+                            <div class="row carousel1__slider--page--text">
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut laboer
+                                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."
+                            </div>
+                            <div class="row carousel1__slider--page--name">
+                                <img src="img/pictograms/meet_rectangle.png"/>
+                                <span class="carousel1__slider--page--name--name">John Doe</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <div class="item">
-                <div class="carousel__slide">
-                    <div class="col-xs-4"></div>
-                    <div class="col-xs-1 carousel__slide--img">
-                        <img src="img/pictograms/quote_pic.png"/>
-                    </div>
-                    <div class="col-xs-3">
-                        <div class="row carousel__slide--text">
-                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            ut laboer et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."
-                        </div>
-                        <div class="row carousel__slide--name">
-                            <img src="img/pictograms/meet_rectangle.png"/>
-                            <span class="name">John Doe</span>
-                        </div>
-                    </div>
-                    <div class="col-xs-4"></div>
-                </div>
-            </div>
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#carousel-10" data-slide="prev">
+                <img src="img/pictograms/testimontial_arrowleft.png"/>
 
-            <div class="item">
-                <div class="carousel__slide">
-                    <div class="col-xs-4"></div>
-                    <div class="col-xs-1 carousel__slide--img">
-                        <img src="img/pictograms/quote_pic.png"/>
-                    </div>
-                    <div class="col-xs-3">
-                        <div class="row carousel__slide--text">
-                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            ut laboer et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."
-                        </div>
-                        <div class="row carousel__slide--name">
-                            <img src="img/pictograms/meet_rectangle.png"/>
-                            <span class="name">John Doe</span>
-                        </div>
-                    </div>
-                    <div class="col-xs-4"></div>
-                </div>
-            </div>
+            </a>
+            <a class="right carousel-control" href="#carousel-10" data-slide="next">
+                <img src="img/pictograms/testimontial_arrowright.png"/>
+
+            </a>
         </div>
 
-        <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <img src="img/pictograms/testimontial_arrowleft.png"/>
-
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <img src="img/pictograms/testimontial_arrowright.png"/>
-
-        </a>
     </div>
 </div>
 
