--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top"><img class="navbar__img"/></a>
+            <a class="navbar-brand page-scroll" href="#page-top"><img src="./img/MoGo.png" class="navbar__img"/></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -298,7 +298,7 @@
     <div class="row text-center design__intro">
         <div class="col-xs-12">
 
-            <img class="design__bg" />
+            <img class="design__bg" src="./img/feature_bg.png" />
             <div class="page-title text-center">
                 <h3 class="page-title__main">For all devices</h3>
                 <h2 class="page-title__subtitle">Unique design</h2>
@@ -484,7 +484,6 @@
 
     </div>
 </div>
-
 
 <div class="container meet">
     <div class="page-title">
