Ready style for all browsers

--- a/index.html
+++ b/index.html
@@ -518,13 +518,13 @@
             <div class="meet__team--background">
                 <div class="meet__team--imgs">
                     <a class="meet__team--img" href="http://www.facebook.com"><img
-                            /></a>
+                            src="img/pictograms/meet_facebook.png"/></a>
                     <a class="meet__team--img" href="http://twitter.com"><img
-                            /></a>
+                            src="img/pictograms/meet_twitter_white.png"/></a>
                     <a class="meet__team--img" href="http://www.pinterest.com"><img
-                            /></a>
+                            src="img/pictograms/meet_pinterest_white.png"/></a>
                     <a class="meet__team--img" href="http://www.instagram.com"><img
-                            /></a>
+                            src="img/pictograms/meet_instagram_white.png"/></a>
                 </div>
             </div>
             <div class="meet__team--people meet__team--people--1">
@@ -534,19 +534,18 @@
                 <div class="row meet__name--xs--work">Graphic Design</div>
             </div>
         </div>
-
         <div class="col-sm-4 col-xs-12">
             <div class="meet__team--back"></div>
             <div class="meet__team--background">
                 <div class="meet__team--imgs">
                     <a class="meet__team--img" href="http://www.facebook.com"><img
-                            /></a>
+                            src="img/pictograms/meet_facebook.png"/></a>
                     <a class="meet__team--img" href="http://twitter.com"><img
-                            /></a>
+                            src="img/pictograms/meet_twitter_white.png"/></a>
                     <a class="meet__team--img" href="http://www.pinterest.com"><img
-                            /></a>
+                            src="img/pictograms/meet_pinterest_white.png"/></a>
                     <a class="meet__team--img" href="http://www.instagram.com"><img
-                            /></a>
+                            src="img/pictograms/meet_instagram_white.png"/></a>
                 </div>
             </div>
             <div class="meet__team--people meet__team--people--2">
@@ -564,13 +563,13 @@
             <div class="meet__team--background">
                 <div class="meet__team--imgs">
                     <a class="meet__team--img" href="http://www.facebook.com"><img
-                            /></a>
+                            src="img/pictograms/meet_facebook.png"/></a>
                     <a class="meet__team--img" href="http://twitter.com"><img
-                            /></a>
+                            src="img/pictograms/meet_twitter_white.png"/></a>
                     <a class="meet__team--img" href="http://www.pinterest.com"><img
-                            /></a>
+                            src="img/pictograms/meet_pinterest_white.png"/></a>
                     <a class="meet__team--img" href="http://www.instagram.com"><img
-                            /></a>
+                            src="img/pictograms/meet_instagram_white.png"/></a>
                 </div>
             </div>
             <div class="meet__team--people meet__team--people--3">
@@ -941,7 +940,7 @@
 
 <div class="container-fluid map">
     <a href="https://goo.gl/maps/DHF47rwGPys">
-        <img class="map--back"/>
+        <img class="map--back" src="img/map_back.png"/>
         <div class="map__inside">
             <img class="map__inside--pictogram" src="img/pictograms/map_1.png"/>
             <p class="map__inside--text">OPEN MAP</p>
