added animations for pics

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <div class="col-xs-12 row row--first">
                 <div class="col-xs-12 col-sm-4 row services__gallery__block left">
                     <div class="col-xs-2 services__gallery__block__pic">
-                        <img src="img/pictograms/service_img1.png" />
+                        <img class="pic" src="img/pictograms/service_img1.png" />
                     </div>
                     <div class="col-xs-10 services__gallery__block__text">
                         <h4 class="title">Photography</h4>
@@ -239,7 +239,7 @@
 
                 <div class="col-xs-12 col-sm-4 row services__gallery__block middle">
                     <div class="col-xs-2 services__gallery__block__pic">
-                        <img src="img/pictograms/service_img2.png" />
+                        <img class="pic" src="img/pictograms/service_img2.png" />
                     </div>
                     <div class="col-xs-10 services__gallery__block__text">
                         <h4 class="title">Photography</h4>
@@ -248,7 +248,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-4 row services__gallery__block right">
                     <div class="col-xs-2 services__gallery__block__pic">
-                        <img src="img/pictograms/service_img3.png" />
+                        <img class="pic" src="img/pictograms/service_img3.png" />
                     </div>
                     <div class="col-xs-10 services__gallery__block__text">
                         <h4 class="title">Photography</h4>
@@ -260,7 +260,7 @@
             <div class="col-xs-12 row row--second">
                 <div class="col-xs-12 col-sm-4 row services__gallery__block left">
                     <div class="col-xs-2 services__gallery__block__pic">
-                        <img src="img/pictograms/service_img4.png" />
+                        <img class="pic" src="img/pictograms/service_img4.png" />
                     </div>
                     <div class="col-xs-10 services__gallery__block__text">
                         <h4 class="title">Photography</h4>
@@ -269,7 +269,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-4 row services__gallery__block middle">
                     <div class="col-xs-2 services__gallery__block__pic">
-                        <img src="img/pictograms/service_img5.png" />
+                        <img class="pic" src="img/pictograms/service_img5.png" />
                     </div>
                     <div class="col-xs-10 services__gallery__block__text">
                         <h4 class="title">Photography</h4>
@@ -279,7 +279,7 @@
 
                 <div class="col-xs-12 col-sm-4 row services__gallery__block right">
                     <div class="col-xs-2 services__gallery__block__pic">
-                        <img src="img/pictograms/service_img6.png" />
+                        <img class="pic" src="img/pictograms/service_img6.png" />
                     </div>
                     <div class="col-xs-10 services__gallery__block__text">
                         <h4 class="title">Photography</h4>
