--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
     </div>
 </div>
 
-<div class="container-fluid work">
+<div class="container-fluid work" id="work">
     <div class="page-title text-center">
         <h3 class="page-title__main">What we do</h3>
         <h2 class="page-title__subtitle">SOME OF OUR WORK</h2>
@@ -853,7 +853,7 @@
     </div>
 </div>
 
-<div class="container blog">
+<div class="container blog" id="blog">
     <div class="page-title">
         <h3 class="page-title__main">Our stories</h3>
         <h2 class="page-title__subtitle">LATEST BLOG</h2>
@@ -937,7 +937,7 @@
 </div>
 
 
-<footer class="container-fluid foot">
+<footer class="container-fluid foot" id="contact">
     <div class="container">
         <div class="col-md-4 col-sm-12 foot__1">
             <p class="foot__1--logo">MoGo</p>
