--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Macopedia - TASK 2</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
     <!--<link href="css/style.min.css" rel="stylesheet">-->
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto" rel="stylesheet">
@@ -1045,12 +1045,9 @@
 
 
 <script src="jquery/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.easing.min.js"></script>
-<script src="js/scrollingNav.js"></script>
-<script src="js/counters.js"></script>
-<script src="js/accordion.js"></script>
-<script src="js/map.js"></script>
+
+<script src="script.min.js"></script>
+
 <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5vPJd91DdZEZ2SGL9NvGUmD3kaeEB7a0&callback=initMap"
         type="text/javascript">
