--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <div class="col-xs-12 row row--first">
                 <div class="col-xs-12 col-sm-4 row services__gallery__block left">
                     <div class="col-xs-2 services__gallery__block__pic">
-                        <img class="pic" src="img/pictograms/service_img1.png" />
+                        <img class="pic" src="img/pictograms/service_img1.png"/>
                     </div>
                     <div class="col-xs-10 services__gallery__block__text">
                         <h4 class="title">Photography</h4>
@@ -239,7 +239,7 @@
 
                 <div class="col-xs-12 col-sm-4 row services__gallery__block middle">
                     <div class="col-xs-2 services__gallery__block__pic">
-                        <img class="pic" src="img/pictograms/service_img2.png" />
+                        <img class="pic" src="img/pictograms/service_img2.png"/>
                     </div>
                     <div class="col-xs-10 services__gallery__block__text">
                         <h4 class="title">Photography</h4>
@@ -248,7 +248,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-4 row services__gallery__block right">
                     <div class="col-xs-2 services__gallery__block__pic">
-                        <img class="pic" src="img/pictograms/service_img3.png" />
+                        <img class="pic" src="img/pictograms/service_img3.png"/>
                     </div>
                     <div class="col-xs-10 services__gallery__block__text">
                         <h4 class="title">Photography</h4>
@@ -260,7 +260,7 @@
             <div class="col-xs-12 row row--second">
                 <div class="col-xs-12 col-sm-4 row services__gallery__block left">
                     <div class="col-xs-2 services__gallery__block__pic">
-                        <img class="pic" src="img/pictograms/service_img4.png" />
+                        <img class="pic" src="img/pictograms/service_img4.png"/>
                     </div>
                     <div class="col-xs-10 services__gallery__block__text">
                         <h4 class="title">Photography</h4>
@@ -269,7 +269,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-4 row services__gallery__block middle">
                     <div class="col-xs-2 services__gallery__block__pic">
-                        <img class="pic" src="img/pictograms/service_img5.png" />
+                        <img class="pic" src="img/pictograms/service_img5.png"/>
                     </div>
                     <div class="col-xs-10 services__gallery__block__text">
                         <h4 class="title">Photography</h4>
@@ -279,7 +279,7 @@
 
                 <div class="col-xs-12 col-sm-4 row services__gallery__block right">
                     <div class="col-xs-2 services__gallery__block__pic">
-                        <img class="pic" src="img/pictograms/service_img6.png" />
+                        <img class="pic" src="img/pictograms/service_img6.png"/>
                     </div>
                     <div class="col-xs-10 services__gallery__block__text">
                         <h4 class="title">Photography</h4>
@@ -298,7 +298,7 @@
     <div class="row text-center design__intro">
         <div class="col-xs-12">
 
-            <img class="design__bg" src="./img/feature_bg.png" />
+            <img class="design__bg" src="./img/feature_bg.png"/>
             <div class="page-title text-center">
                 <h3 class="page-title__main">For all devices</h3>
                 <h2 class="page-title__subtitle">Unique design</h2>
@@ -420,7 +420,8 @@
                         </div>
                         <div class="col-sm-7 col-xs-10">
                             <div class="row carousel1__slider--page--text">
-                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt
                                 ut laboer
                                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."
                             </div>
@@ -439,7 +440,8 @@
                         </div>
                         <div class="col-sm-7 col-xs-10">
                             <div class="row carousel1__slider--page--text">
-                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt
                                 ut laboer
                                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."
                             </div>
@@ -458,7 +460,8 @@
                         </div>
                         <div class="col-sm-7 col-xs-10">
                             <div class="row carousel1__slider--page--text">
-                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt
                                 ut laboer
                                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."
                             </div>
@@ -695,12 +698,13 @@
     </div>
 </div>
 
+
 <div class="container testimontial">
 
-    <div id="carousel-1" class="carousel slide" data-ride="carousel">
+    <div id="carousel-11" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="item active">
-                <div class="testimontial__slider--page">
+                <div class="carousel1__slider--page">
                     <div class="col-sm-2 col-xs-10 testimontial__slider--page--img">
                         <img src="img/testimontial_1.png"/>
                     </div>
@@ -719,7 +723,7 @@
             </div>
 
             <div class="item">
-                <div class="testimontial__slider--page">
+                <div class="carousel1__slider--page">
                     <div class="col-sm-2 col-xs-10 testimontial__slider--page--img">
                         <img src="img/testimontial_1.png"/>
                     </div>
@@ -738,12 +742,12 @@
             </div>
 
             <div class="item">
-                <div class="testimontial__slider--page">
+                <div class="carousel1__slider--page">
                     <div class="col-sm-2 col-xs-10 testimontial__slider--page--img">
                         <img src="img/testimontial_1.png"/>
                     </div>
                     <div class="col-sm-7 col-xs-10">
-                        <div class="row testimontial__slider--page--text">
+                        <div class="row  testimontial__slider--page--text">
                             "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fermentum condimentum iaculis.
                             Vestibulum sed purus suscipit, suscipit massa vitae, rutrum quam. Vivamus vehicula ornare
                             tincidunt."
@@ -757,20 +761,17 @@
             </div>
         </div>
 
-        <!-- Left and right controls -->
-        <a class="left carousel-control" href="#carousel-1" data-slide="prev">
+        <a class="left carousel-control" href="#carousel-11" data-slide="prev">
             <img src="img/pictograms/testimontial_arrowleft.png"/>
 
         </a>
-
-        <a class="right carousel-control" href="#carousel-1" data-slide="next">
+        <a class="right carousel-control" href="#carousel-11" data-slide="next">
             <img src="img/pictograms/testimontial_arrowright.png"/>
 
         </a>
     </div>
-
-
 </div>
+
 
 <div class="container-fluid say">
     <img class="say__background" src="img/people_back.png"/>
@@ -924,7 +925,6 @@
                 <span>98</span>
             </div>
         </div>
-git
     </div>
 </div>
 
@@ -933,18 +933,17 @@ git
         <img class="map--back" src="img/map_back.png"/>
         <div class="map__inside">
             <img class="map__inside--pictogram" src="img/pictograms/map_1.png"/>
-            <p  class="map__inside--text">OPEN MAP</p>
+            <p class="map__inside--text">OPEN MAP</p>
             <img class="map__inside--rectangle" src="img/pictograms/meet_rectangle.png"/>
         </div>
     </a>
     <div id="box" class="map__box">
-         <div class="map__box--content">
-             <span class="map__box--content--close">&times;</span>
-             <div id="map"></div>
-         </div>
-     </div>
+        <div class="map__box--content">
+            <span class="map__box--content--close">&times;</span>
+            <div id="map"></div>
+        </div>
+    </div>
 </div>
-
 
 
 <footer class="container-fluid foot" id="contact">
