--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:900" rel="stylesheet">
     <script src="js/respond.min.js"></script>
     <!-- font-family: 'Kaushan Script', cursive; -->
+
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/responsive-nav.js"></script>
 </head>
 
 
@@ -1053,6 +1056,9 @@ git
         type="text/javascript">
 
 </script>
+<script src="js/fastclick.js"></script>
+<script src="js/scroll.js"></script>
+<script src="js/fixed-responsive-nav.js"></script>
 
 </body>
 
