--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
                 <li class="">
-                    <a class="page-scroll" href="#O"><img class="navbar__pic--cart"/></a>
+                    <a class="page-scroll" href="#O"><img src="./img/pictograms/banner_shopping-cart.png" class="navbar__pic--cart"/></a>
                 </li>
                 <li class="">
-                    <a class="page-scroll" href="#O"><img class="navbar__pic--glass"/></a>
+                    <a class="page-scroll" href="#O"><img src="./img/pictograms/banner_magnifying-glass.png" class="navbar__pic--glass"/></a>
                 </li>
             </ul>
         </div>
@@ -68,7 +68,7 @@
 </nav>
 
 <div class="container-fluid" id="banner">
-    <img/>
+    <img src="./img/banner_bg.png"/>
     <div class="row text-center banner__info">
         <div class="col-xs-12">
             <div class="banner__info--first">
