--- a/index.html
+++ b/index.html
@@ -959,15 +959,17 @@
             </div>
             <img class="foot__1--line" src="img/blog_line.png"/>
             <div class="row foot__1--site">
-                <span class="foot__1--site--text">Follow Us: </span>
-                <img src="img/pictograms/foot_facebook.png"/>
-                <img src="img/pictograms/foot_twitter.png"/>
-                <img src="img/pictograms/foot_instagram.png"/>
-                <img src="img/pictograms/foot_pinterest.png"/>
-                <img src="img/pictograms/foot_google.png"/>
-                <img src="img/pictograms/foot_youtube.png"/>
-                <img src="img/pictograms/foot_dribbble.png"/>
-                <img src="img/pictograms/foot_tumblr.png"/>
+                <ul id="foot__1--site--sprite">
+                    <span class="foot__1--site--text">Follow Us: </span>
+                    <li id="dribble"><a href="http://dribbble.com"></a></li>
+                    <li id="facebook"><a href="http://www.facebook.pl"></a></li>
+                    <li id="google"><a href="http://www.google.pl"></a></li>
+                    <li id="instagram"><a href="http://www.instagram.com"></a></li>
+                    <li id="pinterest"><a href="http://www.pinterest.pl"></a></li>
+                    <li id="tumblr"><a href="http://www.tumblr.pl"></a></li>
+                    <li id="twitter"><a href="http://www.twitter.pl"></a></li>
+                    <li id="youtube"><a href="http://www.youtube.pl"></a></li>
+                </ul>
             </div>
             <form>
                 <input type="text" id="sub" name="sub" placeholder="Your Email...">
