Fix figcaption in BLOG

--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
                     <p class="blog__news--month">Jan</p>
                 </figcaption>
             </figure>
-            <p class="blog__news--title">SED DO EIUSMOD TEMPOR</p>
+            <p class="blog__news--title">SED DO EIUSMOD TEMPOR DOLORE</p>
             <p class="blog__news--text">Consectetur adipiscing elit, sed do siusmod tempor incisunt ut labore et dolore
                 magna aliqua.</p>
             <span class="blog__news--line"></span>
