--- a/index.html
+++ b/index.html
@@ -506,13 +506,13 @@
             </div>
             <div class="meet__team--background">
                 <div class="meet__team--imgs">
-                    <a class="meet__team--img" href="http://www.facebook.com"><img
+                    <a class="meet__team--img" target="_blank" href="http://www.facebook.com"><img
                             src="img/pictograms/meet_facebook.png"/></a>
-                    <a class="meet__team--img" href="http://twitter.com"><img
+                    <a class="meet__team--img" target="_blank" href="http://twitter.com"><img
                             src="img/pictograms/meet_twitter_white.png"/></a>
-                    <a class="meet__team--img" href="http://www.pinterest.com"><img
+                    <a class="meet__team--img" target="_blank" href="http://www.pinterest.com"><img
                             src="img/pictograms/meet_pinterest_white.png"/></a>
-                    <a class="meet__team--img" href="http://www.instagram.com"><img
+                    <a class="meet__team--img" target="_blank" href="http://www.instagram.com"><img
                             src="img/pictograms/meet_instagram_white.png"/></a>
                 </div>
             </div>
@@ -528,13 +528,13 @@
             <div class="meet__team--back"></div>
             <div class="meet__team--background">
                 <div class="meet__team--imgs">
-                    <a class="meet__team--img" href="http://www.facebook.com"><img
+                    <a class="meet__team--img" target="_blank" href="http://www.facebook.com"><img
                             src="img/pictograms/meet_facebook.png"/></a>
-                    <a class="meet__team--img" href="http://twitter.com"><img
+                    <a class="meet__team--img" target="_blank" href="http://twitter.com"><img
                             src="img/pictograms/meet_twitter_white.png"/></a>
-                    <a class="meet__team--img" href="http://www.pinterest.com"><img
+                    <a class="meet__team--img" target="_blank" href="http://www.pinterest.com"><img
                             src="img/pictograms/meet_pinterest_white.png"/></a>
-                    <a class="meet__team--img" href="http://www.instagram.com"><img
+                    <a class="meet__team--img" target="_blank" href="http://www.instagram.com"><img
                             src="img/pictograms/meet_instagram_white.png"/></a>
                 </div>
             </div>
@@ -552,13 +552,13 @@
             <div class="meet__team--back"></div>
             <div class="meet__team--background">
                 <div class="meet__team--imgs">
-                    <a class="meet__team--img" href="http://www.facebook.com"><img
+                    <a class="meet__team--img" target="_blank" href="http://www.facebook.com"><img
                             src="img/pictograms/meet_facebook.png"/></a>
-                    <a class="meet__team--img" href="http://twitter.com"><img
+                    <a class="meet__team--img" target="_blank" href="http://twitter.com"><img
                             src="img/pictograms/meet_twitter_white.png"/></a>
-                    <a class="meet__team--img" href="http://www.pinterest.com"><img
+                    <a class="meet__team--img" target="_blank" href="http://www.pinterest.com"><img
                             src="img/pictograms/meet_pinterest_white.png"/></a>
-                    <a class="meet__team--img" href="http://www.instagram.com"><img
+                    <a class="meet__team--img" target="_blank" href="http://www.instagram.com"><img
                             src="img/pictograms/meet_instagram_white.png"/></a>
                 </div>
             </div>
@@ -961,14 +961,14 @@
             <div class="row foot__1--site">
                 <ul id="foot__1--site--sprite">
                     <span class="foot__1--site--text">Follow Us: </span>
-                    <li id="dribble"><a href="http://dribbble.com"></a></li>
-                    <li id="facebook"><a href="http://www.facebook.pl"></a></li>
-                    <li id="google"><a href="http://www.google.pl"></a></li>
-                    <li id="instagram"><a href="http://www.instagram.com"></a></li>
-                    <li id="pinterest"><a href="http://www.pinterest.pl"></a></li>
-                    <li id="tumblr"><a href="http://www.tumblr.pl"></a></li>
-                    <li id="twitter"><a href="http://www.twitter.pl"></a></li>
-                    <li id="youtube"><a href="http://www.youtube.pl"></a></li>
+                    <li id="dribble"><a target="_blank" href="http://dribbble.com"></a></li>
+                    <li id="facebook"><a target="_blank" href="http://www.facebook.pl"></a></li>
+                    <li id="google"><a target="_blank" href="http://www.google.pl"></a></li>
+                    <li id="instagram"><a target="_blank" href="http://www.instagram.com"></a></li>
+                    <li id="pinterest"><a target="_blank" href="http://pl.pinterest.com/"></a></li>
+                    <li id="tumblr"><a target="_blank" href="http://www.tumblr.com/"></a></li>
+                    <li id="twitter"><a target="_blank" href="http://www.twitter.pl"></a></li>
+                    <li id="youtube"><a target="_blank" href="http://www.youtube.pl"></a></li>
                 </ul>
             </div>
             <form>
